fix: Update swagger spec
